# c-patterns

./: CMakeLists.txt  README.md
src/: pattern1.c  pattern2.c  pattern3.c  pattern4.c  pattern4.h
src/pattern4/: common.h  s_alloc.c  s_alloc.h  s_malloc.c  s_malloc.h
src/resource_manager/: resource_manager.c  resource_manager.h  rm_mem.c  rm_mem.h
